--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -33,7 +33,7 @@ services:
             - '@wizards_rest.fractal_manager'
 
     Wizards\RestBundle\Services\FormatOptions:
-        alias: Wizards\RestBundle\Services\FormatOptions
+        alias: wizards_rest.format_options_getter
 
     wizards_rest.format_options_getter:
         class: Wizards\RestBundle\Services\FormatOptions
